
- Add max_token_length parameter to whitespace tokenizer.

- Statistics for jobs and operations are enabled by default. If you don't need
  any statistics, please set ``stats.enabled`` to ``false``.

- ``ALTER TABLE <name> OPEN`` will now wait for all shards to become active
  before returning to be consistent with the behaviour of other statements.

- CrateDB is now based on Elasticsearch 6.1.3 and Lucene 7.1.0.

- Added a new ``bengali`` language analyzer and a ``bengali_normalization``
  token filter.

- Added new ``cluster.routing.allocation.disk.watermark.flood_stage`` setting,
  that controls at which disk usage indices should become read-only to prevent
  running out of disk space. There is also a new node check that indicates
  whether the threshold is exceeded.

- Added new tokenizers ``simple_pattern`` and ``simple_pattern_split`` which
  allow to tokenize text for the fulltext index by a regular expression pattern.

- Changed ``BEGIN`` and ``SET SESSION`` to no longer require ``DQL``
  permissions on the ``CLUSTER`` level.

- Implemented a `Ready` node status JMX metric expressing if the node is ready
  for processing SQL statements.

Fixes
=====

- Fixed a potential NPE when running `SHOW CREATE TABLE` with plain type
  indices.

- Fixed an issue that would cause queries ordered by a ``STRING`` scalar with 
  possible ``NULL`` values to get stuck.

- Fixed an issue that caused nodes to crash with ``OutOfMemoryException`` when
  executing queries with ``ORDER BY`` on large data sets. Instead, the query
  circuit breaker is tripped, the query is killed and the node’s health is
  unaffected.

- Improved the error handling for a race condition to make sure it doesn't
  cause queries to get stuck.

- Improved the behaviour in case the cluster drops below the number of minimum
  nodes. The root REST endpoint will no longer timeout and ``sys.checks`` can
  still be queried, similar to how ``sys.nodes`` can still be queried.